# paper-qa-lang

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
api/: main.py
frontend/: app.js  index.html  style.css
mcp/paper-download-mcp/: models.py  pyproject.toml  server.py
mcp/paper-download-mcp/providers/: arxiv.py  semantic_scholar.py  unpaywall.py
mcp/paper-metadata-mcp/: models.py  pyproject.toml  server.py
mcp/paper-metadata-mcp/providers/: crossref.py  openalex.py  semantic_scholar.py  unpaywall.py
src/paper_qa_lang/: __init__.py
src/paper_qa_lang/chat/: classifier.py  cli.py  engine.py
src/paper_qa_lang/config/: __init__.py  settings.py
src/paper_qa_lang/data/: ai_tech.json  greetings.json
src/paper_qa_lang/embeddings/: __init__.py  qwen_embedding.py
src/paper_qa_lang/graph/: __init__.py  ingestion.py  react.py
src/paper_qa_lang/helper/: __init__.py  proxy_detector.py
src/paper_qa_lang/ingestion/: __init__.py  identify.py
src/paper_qa_lang/models/: __init__.py  types.py
src/paper_qa_lang/parsing/: __init__.py  chunking.py  context_builder.py  enrichment.py  pdf_parser.py
src/paper_qa_lang/prompts/: __init__.py  templates.py
src/paper_qa_lang/store/: __init__.py  chroma_store.py  paper_library.py
src/paper_qa_lang/utils/: __init__.py  hash.py
tests/: test_enrichment.py  test_ingestion.py  test_library.py  test_parsing.py
tests/bllose_person_test/: __init__.py  person_test.py
