[project]
name = "paper-qa-lang"
description = "PaperQA reimplementation using LangChain + LangGraph + MCP"
version = "0.1.0"
requires-python = ">=3.11"

# ── Core (always required) ─────────────────────────────────────────────────────
dependencies = [
    "langchain==1.2.15",
    "langgraph==1.1.9",
    "langchain-core>=1.3.0,<2",
    "pydantic>=2.7.4,<3",
]

# ── Optional groups ────────────────────────────────────────────────────────────

[project.optional-dependencies]
parsing = [
    "pymupdf>=1.27",
]
store = [
    "langchain-chroma>=1.1.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "langchain-text-splitters>=0.3.0",
]
llm = [
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-google-genai>=0.1.0",
    "langchain-mcp-adapters>=0.2.0",
    "mcp>=1.0.0,<2",
]
chat = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sse-starlette>=2.0.0",
    "rich>=13.0.0",
]
all = [
    "paper-qa-lang[parsing,store,llm,chat]",
]

# ── MCP service deps (separate from core library) ──────────────────────────────
mcp-metadata = [
    "mcp>=1.0.0",
    "httpx>=0.28,<1",
    "pydantic>=2.10,<3",
]
mcp-download = [
    "mcp>=1.0.0",
    "httpx>=0.28,<1",
    "pydantic>=2.10,<3",
]
